--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -9,6 +9,9 @@
 - title: Education
   type: time_table
   contents:
+    - title: Docent in Computational Biology
+      institution: Chalmers University of Technology, Sweden
+      year: 2025
     - title: PhD in Systems Biology
       institution: Imperial College London, UK
       year: 2013-2017
